--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# SO
+*.swp
+*.swo
+*.swn
+
 # Logs
 logs
 *.log
@@ -59,3 +64,6 @@ typings/
 
 # next.js build output
 .next
+
+#configuration defined output file
+dist/bundle.js
