--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Serverlessfloripa slack invite form",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config ./build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
