--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Serverlessfloripa slack invite form",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --config ./build/webpack.config.js",
     "build": "webpack --config ./build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,7 +23,9 @@
   },
   "homepage": "https://github.com/ricardomlima/serverlessfloripa-slack-form#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
