--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "homepage": "https://github.com/ricardomlima/serverlessfloripa-slack-form#readme",
   "devDependencies": {
+    "bootstrap": "^4.1.3",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
+    "style-loader": "^0.23.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
